--- a/data.json.org
+++ b/data.json.org
@@ -1,56 +1,54 @@
-[
-  {
+{
     "default_arm_server": "555.555.555.555",
     "data_arm_server": "666.666.666.666",
     "arm_router_no": "arm_router_no_value",
     "pic_sensor_no": "pic_sensor_no_value",
-    "sensor_monitor_settings" : {
-      "month": "3",
-      "day": "m5",
-      "weekday": "0",
-      "hour": "m12",
-      "minutes": "29",
-      "second": "58",
+    "sensor_monitor_settings": {
+        "month": "3",
+        "day": "m5",
+        "weekday": "0",
+        "hour": "m12",
+        "minutes": "29",
+        "second": "58"
     },
-    "door_sensor_monitor_settings" : {
-      "month": "3",
-      "day": "m5",
-      "weekday": "0",
-      "hour": "m12",
-      "minutes": "29",
-      "second": "58",
+    "door_sensor_monitor_settings": {
+        "month": "4",
+        "day": "m10",
+        "weekday": "0",
+        "hour": "m12",
+        "minutes": "29",
+        "second": "58"
     },
-    "arm_monitor_settings" : {
-      "month": "3",
-      "day": "m5",
-      "weekday": "0",
-      "hour": "m12",
-      "minutes": "29",
-      "second": "58",
+    "arm_monitor_settings": {
+        "month": "1",
+        "day": "31",
+        "weekday": "0",
+        "hour": "m12",
+        "minutes": "29",
+        "second": "58"
     },
-    "inquiry_settings" : {
-      "month": "3",
-      "day": "m5",
-      "weekday": "0",
-      "hour": "m12",
-      "minutes": "29",
-      "second": "58",
+    "inquiry_settings": {
+        "month": "2",
+        "day": "m5",
+        "weekday": "0",
+        "hour": "m12",
+        "minutes": "29",
+        "second": "58"
     },
-    "pic_sensor_reboot" : {
-      "month": "3",
-      "day": "m5",
-      "weekday": "0",
-      "hour": "m12",
-      "minutes": "29",
-      "second": "58",
+    "pic_sensor_reboot": {
+        "month": "5",
+        "day": "12",
+        "weekday": "0",
+        "hour": "m12",
+        "minutes": "29",
+        "second": "58"
     },
-    "no_name" : {
-      "month": "3",
-      "day": "m5",
-      "weekday": "0",
-      "hour": "m12",
-      "minutes": "29",
-      "second": "58",
+    "no_name": {
+        "month": "12",
+        "day": "15",
+        "weekday": "0",
+        "hour": "m12",
+        "minutes": "29",
+        "second": "58"
     }
-  }
-]
+}
